Step3 - 리팩터링(매장 식사 주문) (#232)
* docs(step3): 이전 미션의 용어사전 + 도메인 모델 가져오기

* docs(step3): 이전 미션의 용어사전 + 도메인 모델 업데이트

* refactor(step3): 바뀐 용어 사전을 적용하기 위해 Product 의 displayedName 이름 변경 -> name

* refactor(step3): 바뀐 용어 사전을 적용하기 위해 Menu 의 displayedName 이름 변경 -> name

* refactor(step3): 주문을 배달주문, 매장주문, 포장주문 각각에 구현을 추가

* refactor(step3): 매장 테이블 리팩터링

name 과 numberOfGuests 를 값 객체로 변경

* refactor(step3): 매장 주문 리팩터링

* refactor(step3): 매장 주문 Controller 에서 도메인 객체대신 ResponseDto 객체를 반환하도록 수정

* chore(step3): 사용하지 않는 인터페이스 제거

* chore(step3): 용어사전 + 도메인 모델의 그룹을 Bounded Context로 묶어주는 작업

기존에는 도메인 단위로 그룹을 지어줬으나
Bounded Context 단위로 묶어주는 작업을 한다.

* test(step3): OrderTable 테스트 추가

* refactor(step3): EatInOrderLineItems 생성 시 메뉴의 가격 목록을 가져와서 validation + 가격 초기화를 진행하도록 변경

* refactor(step3): Product 내부의 ProductName, ProductPrice 의 이름 변경

모델링과 동일한 이름을 사용하도록 변경
ProductName -> name
ProductPrice -> price

* refactor(step3): Menu 내부의 MenuName, MenuPrice 의 이름 변경

모델링과 동일한 이름을 사용하도록 변경
MenuName -> name
MenuPrice -> price

* refactor(step3): EatInOrder의 orderTableId 에 있던 `@Trasient` 애너테이션 @Column 으로 변경

* docs(step3): 모델링 잘못된 내용 수정

매장 주문에 포함된 배달 주문, 포장 주문에 대한 내용 제거

* refactor(step3): OrderTableClient 를 제거하고 EatInOrderPolicy라는 도메인 서비스를 사용하여 EatInOrder 와 OrderTable 애그리거트 간의 상호작용을 하도록 변경

* refactor(step3): 컨텍스트별로 문서를 분리하여 용어사전 + 모델링을 기록

* refactor(step3): 테스트에 용어사전을 사용하도록 수정

* refactor(step3): OrderedMenu 에서 메뉴의 Display or Hide 여부까지 가져오도록 수정

* refactor(step3): 누락했던 포장주문 테스트 이름 변경